samples/_failures_safe/1761463122_e6e138_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bac074d.c: In function ‘main’:
./samples/SAFE/__tmp_9bac074d.c:151:5: error: expected expression at end of input
  151 |     if (cols1 == rows2)
      |     ^~
./samples/SAFE/__tmp_9bac074d.c:151:5: error: expected declaration or statement at end of input
